load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library")

# Generate code from the IDL file
genrule(
    name = "generate_hello_world",
    srcs = ["idl/HelloWorld.idl"],
    outs = [
        "idl/HelloWorld.hpp",
        "idl/HelloWorldCdrAux.hpp",
        "idl/HelloWorldCdrAux.ipp",
        "idl/HelloWorldPubSubTypes.cxx",
        "idl/HelloWorldPubSubTypes.hpp",
        "idl/HelloWorldTypeObjectSupport.cxx",
        "idl/HelloWorldTypeObjectSupport.hpp",
    ],
    cmd = "fastddsgen -d $(RULEDIR) $<",
)

# Library for the generated code
cc_library(
    name = "hello_world_lib",
    srcs = [
        "idl/HelloWorldPubSubTypes.cxx",
        "idl/HelloWorldTypeObjectSupport.cxx",
    ],
    hdrs = [
        "idl/HelloWorld.hpp",
        "idl/HelloWorldCdrAux.hpp",
        "idl/HelloWorldCdrAux.ipp",
        "idl/HelloWorldPubSubTypes.hpp",
        "idl/HelloWorldTypeObjectSupport.hpp",
    ],
    includes = ["idl"],  # Export the 'idl' directory for dependent targets
    deps = [
        "@fastdds//:fastdds",
        # "@fastcdr//:fastcdr",
    ],
)

# Publisher binary
cc_binary(
    name = "publisher",
    srcs = ["src/publisher.cpp"],
    deps = [":hello_world_lib"],
)

# Subscriber binary
cc_binary(
    name = "subscriber",
    srcs = ["src/subscriber.cpp"],
    deps = [":hello_world_lib"],
)

# Entry point binary
cc_binary(
    name = "entry",
    srcs = ["src/entry.cpp"],
)