###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################

"""
This MODULE.bazel file defines the external dependencies and module configuration
for the Bazel project.
"""

module(
    name = "bazel_dds",
    version = "1.0",
)

bazel_dep(name = "fastdds", version = "2.14.3.bcr.1")
# bazel_dep(name = "fastcdr", version = "2.2.2")

bazel_dep(name = "rules_cc", version = "0.1.1", dev_dependency = True)

bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
git_override(
    module_name = "hedron_compile_commands",
    remote = "https://github.com/hedronvision/bazel-compile-commands-extractor.git",
    commit = "4f28899228fb3ad0126897876f147ca15026151e",
)
